k8s/apps/headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    goldilocks.fairwinds.com/enabled: "true"
