k8s/apps/headscale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  namespace: headscale
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: headscale
  template:
    metadata:
      labels:
        app.kubernetes.io/name: headscale
        app.kubernetes.io/part-of: headscale
    spec:
      containers:
        - name: headscale
          image: headscale/headscale:latest
          args: ["serve"]
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9090
          # env: {}
          volumeMounts:
            - name: data
              mountPath: /var/lib/headscale
            - name: config
              mountPath: /etc/headscale
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: headscale-data
        - name: config
          configMap:
            name: headscale-config
