k8s/apps/headscale/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headscale
spec:
  parentRefs:
  - name: shared
    namespace: default
  hostnames:
  - headscale.juliamertz.nl
  rules:
  - backendRefs:
    - name: headscale
      port: 80
